k8s/services/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: dev
spec:
  selector:
    app: api-gateway
  type: NodePort
  ports:
  - name: http
    port: 80          
    targetPort: 8080  
    nodePort: 30080
